# gbnet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  readme.md
.github/workflows/: ci.yml
gbnet/: Cargo.toml
gbnet/benches/: throughput.rs
gbnet/examples/: channels.rs  configuration.rs  echo_client.rs  echo_server.rs  serialization.rs
gbnet/fuzz/: Cargo.toml
gbnet/fuzz/fuzz_targets/: fuzz_bitbuffer.rs  fuzz_fragment_reassembly.rs  fuzz_packet_deserialize.rs
gbnet/src/: channel.rs  client.rs  config.rs  congestion.rs  delta.rs  fragment.rs  lib.rs  packet.rs  reliability.rs  security.rs  server.rs  simulator.rs  socket.rs  stats.rs  util.rs  wire.rs
gbnet/src/connection/: handshake.rs  io.rs  mod.rs
gbnet/src/serialize/: collections.rs  mod.rs  primitives.rs
gbnet/src/tests/: mod.rs  network_tests.rs  serialize_tests.rs
gbnet/tests/: integration.rs
gbnet_macros/: Cargo.toml
gbnet_macros/src/: lib.rs
